--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "uri": "https://github.com/KTH/node-web"
   },
   "scripts": {
+    "babel": "babel public/js/app -d dist/js ",
+    "pack": "webpack --config webpack.config.js",
     "test": "NODE_ENV=development mocha --exit test/unit/*.js",
     "codecheck": "standard",
     "codefix": "standard --fix",
     "docker": "npm install --development && npm run build && npm prune --production",
     "build": "NODE_ENV=production gulp build --preserve-comments",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development gulp build && cross-env NODE_ENV=development concurrently --kill-others \"nodemon --ignore dist/ app.js\" \"gulp watch\""
+    "start-dev": "cross-env NODE_ENV=development npm run pack && npm run babel && cross-env NODE_ENV=development concurrently --kill-others \"nodemon --ignore dist/ app.js\" "
   },
   "dependencies": {
     "bluebird": "^3.5.3",
@@ -46,11 +48,20 @@
     "locale": "^0.1.0",
     "passport": "^0.4.0",
     "popper.js": "^1.14.5",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-router": "^5.0.0",
     "safe-utils": "^0.2.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
     "babel-core": "6.9.0",
-    "babel-loader": "^6.2.4",
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
