--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-    "presets": ["@babel/env", "@babel/react"]
+    "presets": ["@babel/env", "@babel/react"],
+    "plugins": [
+      ["@babel/plugin-proposal-decorators", { "legacy": true}],
+      ["@babel/plugin-proposal-class-properties", { "loose": true}]
+  ]
+
   }
