--- a/package.json
+++ b/package.json
@@ -46,22 +46,27 @@
     "kth-node-web-common": "^3.0.5",
     "kth-style": "^3.2.4",
     "locale": "^0.1.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "passport": "^0.4.0",
     "popper.js": "^1.14.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "safe-utils": "^0.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
     "babel-core": "6.9.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
@@ -75,6 +80,8 @@
     "node-mocks-http": "^1.7.3",
     "nodemon": "^1.18.7",
     "standard": "^12.0.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
     "zombie": "6.1.3"
   },
   "engines": {
