--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gulp": "^3.9.1",
     "husky": "^1.2.0",
     "kth-node-build-commons": "^3.0.3",
@@ -78,8 +80,11 @@
     "mockery": "^2.1.0",
     "nock": "^10.0.2",
     "node-mocks-http": "^1.7.3",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.7",
+    "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "zombie": "6.1.3"
