--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
-    "presets": ["@babel/env", "@babel/react"],
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
     "plugins": [
       ["@babel/plugin-proposal-decorators", { "legacy": true}],
       ["@babel/plugin-proposal-class-properties", { "loose": true}]
+
   ]
 
   }
