--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "scripts": {
     "babel": "babel public/js/app -d dist/js ",
-    "pack": "webpack --config webpack.config.js",
+    "vendor": "parcel build  ./public/js/vendor.js",
     "test": "NODE_ENV=development mocha --exit test/unit/*.js",
     "codecheck": "standard",
     "codefix": "standard --fix",
     "docker": "npm install --development && npm run build && npm prune --production",
-    "build": "NODE_ENV=production gulp build --preserve-comments",
+    "build": "NODE_ENV=production rm -rf dist && parcel build ./public/js/app/app.jsx && npm run vendor --preserve-comments",
+    "build-dev": "cross-env NODE_ENV=development rm -rf dist && parcel build --no-minify ./public/js/app/app.jsx && npm run vendor",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development npm run pack && npm run babel && cross-env NODE_ENV=development concurrently --kill-others \"nodemon --ignore dist/ app.js\" "
+    "start-dev": "NODE_ENV=development rm -rf dist && parcel build --no-minify ./public/js/app/app.jsx && npm run vendor && parcel watch ./public/js/app/app.jsx"
   },
   "dependencies": {
     "bluebird": "^3.5.3",
@@ -43,35 +44,33 @@
     "kth-node-redis": "^2.0.0",
     "kth-node-server": "^3.1.1",
     "kth-node-session": "^1.0.3",
-    "kth-node-web-common": "^3.0.5",
+    "kth-node-web-common": "^1.0.2",
     "kth-style": "^3.2.4",
     "locale": "^0.1.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
+    "parcel-bundler": "^1.12.3",
     "passport": "^0.4.0",
     "popper.js": "^1.14.5",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "safe-utils": "^0.2.1"
+    "reactstrap": "^7.1.0",
+    "safe-utils": "^0.2.1",
+    "sass": "^1.17.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-proposal-decorators": "^7.4.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "6.9.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "gulp": "^3.9.1",
     "husky": "^1.2.0",
     "kth-node-build-commons": "^3.0.3",
@@ -82,11 +81,7 @@
     "node-mocks-http": "^1.7.3",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.7",
-    "sass-loader": "^7.1.0",
     "standard": "^12.0.1",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
     "zombie": "6.1.3"
   },
   "engines": {
