Dont run outdated codecheck on push

--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run codecheck && npm run test"
+      "pre-push": "npm run test"
     }
   }
 }
