--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "codecheck": "standard",
     "codefix": "standard --fix",
     "docker": "npm install --development && npm run build && npm prune --production",
-    "build": "NODE_ENV=production rm -rf dist && parcel build ./public/js/app/app.jsx && npm run vendor --preserve-comments",
-    "build-dev": "cross-env NODE_ENV=development rm -rf dist && parcel build ./public/js/vendor.js && parcel watch ./public/js/app/app.jsx",
+    "build": "NODE_ENV=production gulp build && rm -rf dist && parcel build ./public/js/app/app.jsx && npm run vendor --preserve-comments",
+    "build-dev": "cross-env NODE_ENV=development gulp build && rm -rf dist && parcel build ./public/js/vendor.js && parcel watch ./public/js/app/app.jsx",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others \"nodemon --ignore dist/ --ignore public/ app.js\" \"npm run build-dev\""
+    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm run build-dev\" \"nodemon --ignore dist/ --ignore public/ app.js\""
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -77,6 +77,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
+    "kth-node-build-commons": "^3.0.3",
     "merge-stream": "^1.0.1",
     "mocha": "5.2.0",
     "mockery": "^2.1.0",
