--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "parser": "babel-eslint",
   "env": {
     "node": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
