--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.14.3",
@@ -107,6 +108,9 @@
   },
   "engines": {
     "node": "8.16.1"
+  },
+  "alias": {
+    "react": "./node_modules/react we"
   },
   "jshintConfig": {
     "maxerr": 5
