--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ dist
 # KTH Node Web Common imported files
 server/views/system/error.handlebars
 server/views/layouts/errorLayout.handlebars
+
+dist-dev
