--- a/.eslintrc
+++ b/.eslintrc
@@ -6,19 +6,34 @@
     "jest/globals": true
   },
   "extends": ["airbnb", "prettier"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "classes": true,
+      "impliedStrict": true,
+      "jsx": true
+    },
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
   "plugins": ["prettier", "jest"],
   "rules": {
-    "import/newline-after-import": ["error", { "count": 0 }],
-    "semi": ["error", "never"],
-    "global-require": "off",
-    "prefer-template": "off",
+    "import/extensions": "off",
+    "import/newline-after-import": "off",
     "import/order": "off",
-    "quotes": [1, "single", "avoid-escape"],
+    "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/img-has-alt": "off",
+    "no-plusplus": "off",
+    "no-restricted-syntax": "off",
     "no-underscore-dangle": "off",
-    "react/prop-types": "off",
-    "array-callback-return": "off",
+    "prefer-template": "off",
+    "prettier/prettier": ["error"],
+    "radix": "off",
+    "react/destructuring-assignment": ["error", "always", { "ignoreClassFields": true }],
+    "react/jsx-filename-extension": "off",
     "react/no-access-state-in-setstate": "off",
-    "react/destructuring-assignment": [true, "always", { "ignoreClassFields": true }],
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "semi": ["error", "never"],
     "sort-imports": [
       "error",
       {
@@ -28,6 +43,13 @@
         "memberSyntaxSortOrder": ["all", "single", "multiple", "none"]
       }
     ],
-    "strict": "off"
+    "space-before-function-paren": ["error", { "anonymous": "always", "named": "never", "asyncArrow": "always" }],
+    "strict": "off",
+    "global-require": "off",
+    "no-await-in-loop": "off",
+    "no-param-reassign": "off",
+    "consistent-return": "off",
+    "array-callback-return": "off",
+    "react/no-multi-comp": "off"
   }
 }
