--- a/package.json
+++ b/package.json
@@ -13,102 +13,97 @@
   },
   "scripts": {
     "vendor": "parcel build  ./public/js/vendor.js",
-    "test": "NODE_ENV=development jest",
-    "test:watch": "NODE_ENV=development jest --watch",
-    "test:notify": "NODE_ENV=development jest --watch --notify",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:notify": "jest --watch --notify",
     "docker": "npm install --development && npm run build && npm prune --production",
     "build": "NODE_ENV=production npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/app/app.jsx && npm run vendor --preserve-comments",
     "build-dev": "cross-env NODE_ENV=development npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/vendor.js --public-url /node/static && parcel watch ./public/js/app/app.jsx --public-url /node/static",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm run build-dev\" \"nodemon --ignore dist/ app.js\"",
+    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm run build-dev\" \"nodemon --ignore dist/ --ignore dist-dev/ app.js\"",
     "move-handlebar-pages": "cp ./node_modules/kth-node-web-common/lib/handlebars/pages/views/error.handlebars ./server/views/system/error.handlebars && cp ./node_modules/kth-node-web-common/lib/handlebars/pages/layouts/errorLayout.handlebars ./server/views/layouts/errorLayout.handlebars"
   },
   "dependencies": {
-    "applicationinsights": "^1.6.0",
+    "applicationinsights": "^1.7.5",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "component-registry": "^1.0.2",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^3.0.0",
+    "express-handlebars": "^4.0.4",
     "kth-node-access-log": "^0.2.0",
-    "kth-node-api-call": "^3.0.4",
+    "kth-node-api-call": "^3.0.11",
     "kth-node-configuration": "^2.0.1",
     "kth-node-express-routing": "^2.0.3",
     "kth-node-i18n": "^1.0.2",
-    "kth-node-ldap": "^3.0.5",
-    "kth-node-log": "^3.0.2",
-    "kth-node-monitor": "^1.0.26",
-    "kth-node-passport-cas": "^3.1.9",
-    "kth-node-redis": "^2.0.1",
+    "kth-node-ldap": "^3.1.1",
+    "kth-node-log": "^3.1.0",
+    "kth-node-monitor": "^1.1.3",
+    "kth-node-passport-cas": "^3.1.11",
+    "kth-node-redis": "^3.1.4",
     "kth-node-server": "^3.1.2",
     "kth-node-session": "^1.0.4",
-    "kth-node-web-common": "^4.0.1",
-    "kth-style": "^4.2.2",
+    "kth-node-web-common": "^4.0.2",
+    "kth-style": "^4.2.28",
     "locale": "^0.1.0",
-    "mobx": "^5.13.0",
+    "mobx": "^5.15.4",
     "mobx-react": "^5.4.4",
-    "passport": "^0.4.0",
-    "popper.js": "^1.16.0",
+    "passport": "^0.4.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "safe-utils": "^0.2.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.6.2",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.2",
-    "@types/jest": "^25.1.4",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.4.0",
-    "chai": "^4.2.0",
-    "concurrently": "^4.1.2",
-    "cross-env": "^5.2.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.18.2",
+    "@testing-library/react": "^10.0.4",
+    "@types/jest": "^25.2.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
+    "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.9.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^3.0.9",
-    "jest": "^25.2.4",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "jest-extended": "^0.11.5",
-    "kth-node-build-commons": "^4.0.5",
+    "kth-node-build-commons": "^4.0.6",
     "merge-stream": "^2.0.0",
-    "mocha": "6.2.2",
-    "mockery": "^2.1.0",
-    "nock": "^11.7.0",
-    "node-mocks-http": "^1.8.0",
-    "nodemon": "^1.19.4",
+    "node-mocks-http": "^1.8.1",
+    "nodemon": "^2.0.3",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "sass": "^1.23.3",
+    "sass": "^1.26.5",
     "zombie": "6.1.4"
   },
   "prettier": {
-    "trailingComma": "none",
+    "trailingComma": "es5",
+    "arrowParens": "avoid",
     "tabWidth": 2,
     "semi": false,
     "singleQuote": true,
     "printWidth": 120
   },
   "engines": {
-    "node": "8.16.1"
+    "node": "12.0.0"
   },
   "jshintConfig": {
     "maxerr": 5
