--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "4.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "husky": "^4.2.5",
     "kth-node-build-commons": "^4.1.0",
     "merge-stream": "^2.0.0",
