--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "test:watch": "jest --watch",
     "test:notify": "jest --watch --notify",
     "docker": "npm install --development && npm run build && npm prune --production",
-    "build": "NODE_ENV=production npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/app/app.jsx && npm run vendor --preserve-comments",
-    "build-dev": "cross-env NODE_ENV=development npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/vendor.js --public-url /node/static && parcel watch ./public/js/app/app.jsx --public-url /node/static",
+    "build": "NODE_ENV=production npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/app/app.jsx ./public/js/app/serverSideFunctions.js && npm run vendor --preserve-comments",
+    "build-dev": "cross-env NODE_ENV=development npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/vendor.js --public-url /node/static && parcel watch ./public/js/app/app.jsx ./public/js/app/serverSideFunctions.js --public-url /node/static",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm run build-dev\" \"nodemon --ignore dist/ --ignore dist-dev/ app.js\"",
+    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon -e js,jsx,json,handlebars --ignore dist/ --ignore dist-dev/ app.js\"",
     "move-handlebar-pages": "cp ./node_modules/kth-node-web-common/lib/handlebars/pages/views/error.handlebars ./server/views/system/error.handlebars && cp ./node_modules/kth-node-web-common/lib/handlebars/pages/layouts/errorLayout.handlebars ./server/views/layouts/errorLayout.handlebars"
   },
   "dependencies": {
+    "@babel/runtime": "^7.10.4",
     "applicationinsights": "^1.8.0",
     "body-parser": "^1.19.0",
     "component-registry": "^1.3.1",
