--- a/package.json
+++ b/package.json
@@ -19,8 +19,24 @@
     "build": "NODE_ENV=production npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/app/app.jsx ./public/js/app/serverSideFunctions.js && npm run vendor --preserve-comments",
     "build-dev": "cross-env NODE_ENV=development npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/vendor.js --public-url /node/static && parcel watch ./public/js/app/app.jsx ./public/js/app/serverSideFunctions.js --public-url /node/static",
     "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon -e js,jsx,json,handlebars --ignore dist/ --ignore dist-dev/ app.js\"",
+    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"",
     "move-handlebar-pages": "cp ./node_modules/kth-node-web-common/lib/handlebars/pages/views/error.handlebars ./server/views/system/error.handlebars && cp ./node_modules/kth-node-web-common/lib/handlebars/pages/layouts/errorLayout.handlebars ./server/views/layouts/errorLayout.handlebars"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "server/views/system/error.handlebars",
+      "server/views/layouts/errorLayout.handlebars",
+      "dist/*",
+      "dist-dev/*",
+      "test-utils/*",
+      "*/__tests__/*",
+      "*/__mocks__/*",
+      "*/__snapshots__/*",
+      "*.test.js",
+      "./*.svg"
+    ],
+    "ext": "js,jsx,handlebars,scss,svg,png",
+    "delay": 3000
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
