--- a/package.json
+++ b/package.json
@@ -10,35 +10,24 @@
     "type": "git",
     "uri": "https://github.com/KTH/node-web"
   },
+  "engines": {
+    "node": "12"
+  },
   "scripts": {
-    "vendor": "parcel build  ./public/js/vendor.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:notify": "jest --watch --notify",
-    "docker": "npm install --development && npm run build && npm prune --production",
-    "build": "NODE_ENV=production npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/app/app.jsx ./public/js/app/serverSideFunctions.js && npm run vendor --preserve-comments",
-    "build-dev": "cross-env NODE_ENV=development npm run move-handlebar-pages && rm -rf dist && parcel build ./public/js/vendor.js --public-url /node/static && parcel watch ./public/js/app/app.jsx ./public/js/app/ssr-app.js --public-url /node/static",
-    "start": "NODE_ENV=production node app.js",
-    "start-dev": "cross-env NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"",
-    "move-handlebar-pages": "cp ./node_modules/kth-node-web-common/lib/handlebars/pages/views/error.handlebars ./server/views/system/error.handlebars && cp ./node_modules/kth-node-web-common/lib/handlebars/pages/layouts/errorLayout.handlebars ./server/views/layouts/errorLayout.handlebars"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "server/views/system/error.handlebars",
-      "server/views/layouts/errorLayout.handlebars",
-      "dist/*",
-      "test-utils/*",
-      "*/__tests__/*",
-      "*/__mocks__/*",
-      "*/__snapshots__/*",
-      "*.test.js",
-      "./*.svg"
-    ],
-    "ext": "js,jsx,handlebars,scss,svg,png",
-    "delay": 3000
+    "build": "bash ./build.sh prod /node",
+    "build-dev": "bash ./build.sh dev /node",
+    "start": "bash -c 'NODE_ENV=production node app.js'",
+    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
+    "docker:start": "bash ./docker-local.sh start",
+    "docker:stop": "bash ./docker-local.sh stop",
+    "docker:clean": "bash ./docker-local.sh clean",
+    "docker:ps": "docker ps -a"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
+    "@babel/runtime": "^7.12.1",
     "applicationinsights": "^1.8.7",
     "body-parser": "^1.19.0",
     "component-registry": "^1.3.1",
@@ -60,59 +49,61 @@
     "kth-node-session": "^1.0.4",
     "kth-node-web-common": "^5.1.4",
     "kth-style": "^6.0.1",
-    "locale": "^0.1.0",
     "mobx": "^6.0.1",
     "mobx-react": "^7.0.0",
     "passport": "^0.4.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "safe-utils": "^0.2.1"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@types/jest": "^26.0.14",
+    "@testing-library/react": "^11.1.0",
+    "@types/jest": "^26.0.15",
     "babel-eslint": "^10.1.0",
     "concurrently": "^5.3.0",
-    "cross-env": "^7.0.2",
     "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.4",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
-    "jest": "^26.5.3",
+    "jest": "^26.6.0",
     "jest-extended": "^0.11.5",
-    "nodemon": "^2.0.5",
+    "nodemon": "^2.0.6",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2",
+    "pretty-quick": "^3.1.0",
     "sass": "^1.27.0",
     "zombie": "6.1.4"
   },
+  "// (prettier)": "configuration version 2020-06-15 - might also reside in .prettierrc.json",
   "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 2,
+    "arrowParens": "avoid",
+    "printWidth": 120,
     "semi": false,
     "singleQuote": true,
-    "printWidth": 120,
-    "arrowParens": "avoid"
+    "trailingComma": "es5"
   },
-  "engines": {
-    "node": "12"
+  "// (jest)": "configuration version 2020-06-15 (WEB) - might also reside as module.exports in jest.config.js",
+  "jest": {
+    "clearMocks": true,
+    "notifyMode": "failure-change",
+    "setupFilesAfterEnv": [
+      "jest-extended"
+    ],
+    "verbose": true
   },
   "husky": {
     "hooks": {
