.env.dist revised

--- a/.env.dist
+++ b/.env.dist
@@ -43,24 +43,33 @@ LDAP_PASSWORD=
 # Theses settings get default values in development mode (e.g. with "npm run start-dev"),
 # but must likely be set in ".env" when the application is run with Docker.
 #
-LDAP_BASE=OU=UG,DC=ref,DC=ug,DC=kth,DC=se
 SERVICE_PUBLISH=/node
+SESSION_KEY=node-web.sid
+NODE_API_KEY=1234
+#
+# Choose:
+# - Option 1 (API running locally w/o Docker):
+NODE_API_URI=http://localhost:3001/api/node?defaultTimeout=10000
+# - Option 2 (API as well as WEB running locally with Docker):
+#NODE_API_URI=http://host.docker.internal:3001/api/node?defaultTimeout=10000
+# - Option 3 (using API from test servers):
+#NODE_API_URI=https://www-r.referens.sys.kth.se/api/node?defaultTimeout=10000
+#
+LDAP_BASE=OU=UG,DC=ref,DC=ug,DC=kth,DC=se
 SERVER_PORT=3000
 SERVER_SSL=false
 SERVER_HOST_URL=http://localhost:3000
-SERVER_BLOCKS_URL=https://www-r.referens.sys.kth.se/cm/
-NODE_API_KEY=1234
+CM_HOST_URL=https://www-r.referens.sys.kth.se/cm/
 CAS_SSO_URI=https://login-r.referens.sys.kth.se
 SESSION_SECRET=1234567890
-SESSION_KEY=node-web.sid
 #
-NODE_API_URI=http://localhost:3001/api/node?defaultTimeout=10000
-#   OR   - when API as well as WEB run locally with Docker -
-#NODE_API_URI=http://host.docker.internal:3001/api/node?defaultTimeout=10000
-#
+# Choose:
+# - Option 1 (Redis server running locally w/o Docker):
 REDIS_URI=redis://localhost:6379/
-#   OR   - when both your application and a Redis server run locally with Docker -
+# - Option 2 (Redis server as well as WEB running locally with Docker):
 #REDIS_URI=redis://host.docker.internal:6379/
+# - Option 3 (using Redis from test servers):
+#REDIS_URI=... --> value can be found in Cellus Registry's "secrets.env" <--
 
 #
 # *** PART 3 ***
