.env.dist revised

--- a/.env.dist
+++ b/.env.dist
@@ -48,7 +48,7 @@ SESSION_KEY=node-web.sid
 NODE_API_KEY=1234
 #
 # Choose:
-# - Option 1 (API running locally w/o Docker):
+# - Option 1 (API and WEB running locally, at least one of them w/o Docker):
 NODE_API_URI=http://localhost:3001/api/node?defaultTimeout=10000
 # - Option 2 (API as well as WEB running locally with Docker):
 #NODE_API_URI=http://host.docker.internal:3001/api/node?defaultTimeout=10000
@@ -64,7 +64,7 @@ CAS_SSO_URI=https://login-r.referens.sys.kth.se
 SESSION_SECRET=1234567890
 #
 # Choose:
-# - Option 1 (Redis server running locally w/o Docker):
+# - Option 1 (Redis server and WEB running locally, at least one of them w/o Docker):
 REDIS_URI=redis://localhost:6379/
 # - Option 2 (Redis server as well as WEB running locally with Docker):
 #REDIS_URI=redis://host.docker.internal:6379/
