--- a/package.json
+++ b/package.json
@@ -20,11 +20,7 @@
     "build": "bash ./build.sh prod /node",
     "build-dev": "bash ./build.sh dev /node",
     "start": "bash -c 'NODE_ENV=production node app.js'",
-    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
-    "docker:start": "bash ./docker-local.sh start",
-    "docker:stop": "bash ./docker-local.sh stop",
-    "docker:clean": "bash ./docker-local.sh clean",
-    "docker:ps": "docker ps -a"
+    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
