--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "bash ./build.sh prod /node",
     "build-dev": "bash ./build.sh dev /node",
     "start": "bash -c 'NODE_ENV=production node app.js'",
-    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'"
+    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
+    "lint": "eslint \"public/**/*.{js,jsx}\" --quiet"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
@@ -60,20 +61,13 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@kth/eslint-config-kth": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@types/jest": "^26.0.15",
     "babel-eslint": "^10.1.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.13.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.0",
     "jest": "^26.6.0",
     "jest-extended": "^0.11.5",
