--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-web",
-  "version": "2.0.0",
+  "name": "kopps-public-react-web",
+  "version": "0.1.0",
   "description": "Template project for a node express web server",
   "main": "app.js",
   "private": true,
@@ -17,21 +17,24 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:notify": "jest --watch --notify",
-    "build": "bash ./build.sh prod /node",
-    "build-dev": "bash ./build.sh dev /node",
+    "build": "bash ./build.sh prod /kopps-public",
+    "build-dev": "bash ./build.sh dev /kopps-public",
     "start": "bash -c 'NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "lint": "eslint \"public/**/*.{js,jsx}\" --quiet"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
+    "@kth/kth-kip-style-react-components": "0.0.25",
     "applicationinsights": "^1.8.7",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "component-registry": "^1.3.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "kth": "^1.0.0",
     "kth-node-access-log": "^0.2.2",
     "kth-node-api-call": "^3.0.12",
     "kth-node-configuration": "^2.0.3",
@@ -46,6 +49,7 @@
     "kth-node-session": "^1.0.4",
     "kth-node-web-common": "^5.1.4",
     "kth-style": "^6.0.1",
+    "local-cors-proxy": "^1.1.0",
     "mobx": "^6.0.1",
     "mobx-react": "^7.0.0",
     "passport": "^0.4.1",
@@ -53,7 +57,8 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
