--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-env": "7.13.8",
     "@babel/preset-react": "^7.12.1",
     "@kth/eslint-config-kth": "^1.0.6",
     "@testing-library/jest-dom": "^5.11.4",
