--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@babel/runtime": "^7.12.1",
     "@kth/kth-kip-style-react-components": "0.0.25",
+    "@kth/kth-reactstrap": "^0.4.27",
     "applicationinsights": "^1.8.7",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
