chore: Update project description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kopps-public-react-web",
   "version": "0.1.0",
-  "description": "Template project for a node express web server",
+  "description": "Migration from Kopps in Play Framework 2.X to Express and React.",
   "main": "app.js",
   "private": true,
   "license": "MIT",
