--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "local-cors-proxy": "^1.1.0",
     "mobx": "^6.0.1",
     "mobx-react": "^7.0.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "passport": "^0.4.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
