chore: Eslint warns on missing prop type

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": ["@kth/eslint-config-kth"]
+  "extends": ["@kth/eslint-config-kth"],
+  "rules": {
+    "react/prop-types": "warn"
+  }
 }
