--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint": "^7.24.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jest-axe": "^4.1.0",
     "jest-extended": "^0.11.5",
     "nodemon": "^2.0.7",
     "parcel-bundler": "^1.12.4",
