--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "moment-timezone": "^0.5.33",
     "passport": "^0.4.1",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
