--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:notify": "NODE_ENV=test jest --watch --notify",
+    "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchTableView.test.js --watch --notify",
     "build": "bash ./build.sh prod /kopps-public",
     "build-dev": "bash ./build.sh dev /kopps-public",
     "start": "bash -c 'NODE_ENV=production node app.js'",
@@ -30,6 +31,7 @@
     "applicationinsights": "^1.8.10",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.1",
     "component-registry": "^1.3.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^9.0.1",
