--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:notify": "NODE_ENV=test jest --watch --notify",
     "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
+    "test:load": "docker-compose -f test/artillery/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "build": "bash ./build.sh prod",
     "build-dev": "bash ./build.sh dev",
     "lint": "eslint \"public/**/*.{js,jsx}\" --quiet",
