test: minor changes to artillery load test

--- a/test/artillery/scripts/view-implemantation.yml
+++ b/test/artillery/scripts/view-implemantation.yml
@@ -7,13 +7,13 @@ config:
     - duration: 60
       arrivalRate: 5
       name: Warm up
-    - duration: 120
-      arrivalRate: 5
-      rampTo: 50
-      name: Ramp up load
-    - duration: 600
-      arrivalRate: 50
-      name: Sustained load
+    # - duration: 120
+    #   arrivalRate: 5
+    #   rampTo: 50
+    #   name: Ramp up load
+    # - duration: 600
+    #   arrivalRate: 50
+    #   name: Sustained load
 scenarios:
   - name: 'View Implementation of the education'
     flow:
