chore (deps): change dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kopps-public-react-web",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Migration from Kopps in Play Framework 2.X to Express and React.",
   "main": "app.js",
   "private": true,
@@ -14,50 +14,50 @@
     "node": "12"
   },
   "scripts": {
-    "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
-    "test": "cross-env NODE_ENV=test jest",
-    "test:watch": "NODE_ENV=test jest --watch",
-    "test:notify": "NODE_ENV=test jest --watch --notify",
-    "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
-    "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "build": "bash ./build.sh prod",
     "build-dev": "bash ./build.sh dev",
-    "lint": "eslint \"public/**/*.{js,jsx}\" --quiet",
+    "lint": "eslint \"{public,server}/**/*.{js,jsx}\" --quiet",
+    "lint-v": "eslint \"{public,server}/**/*.{js,jsx}\" ",
     "prepare": "husky install",
+    "postinstall": "bash -c 'rm -rf ./dist; rm -rf ./node_modules/.cache/webpack'",
+    "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "start": "bash -c 'NODE_ENV=production node --inspect=0.0.0.0 app.js'",
-    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'"
+    "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
+    "test:notify": "NODE_ENV=test jest --watch --notify",
+    "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
+    "test:watch": "NODE_ENV=test jest --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.7",
+    "@babel/runtime": "^7.17.2",
+    "@kth/api-call": "^4.0.34",
+    "@kth/kth-node-web-common": "^7.0.8",
     "@kth/kth-reactstrap": "^0.4.47",
-    "applicationinsights": "^2.2.0",
+    "@kth/log": "^3.1.11",
+    "@kth/monitor": "^3.0.22",
+    "@kth/server": "^4.0.1",
+    "@kth/session": "^3.0.2",
+    "applicationinsights": "^2.2.1",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "chalk": "^4.1.2",
     "component-registry": "^2.0.0",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-handlebars": "^5.3.5",
-    "kth": "^1.0.0",
     "kth-node-access-log": "^0.2.7",
-    "kth-node-api-call": "^3.0.18",
-    "kth-node-configuration": "^2.0.8",
+    "kth-node-configuration": "^2.0.10",
     "kth-node-express-routing": "^2.0.12",
     "kth-node-i18n": "^1.0.12",
-    "kth-node-log": "^3.1.11",
-    "kth-node-monitor": "^1.1.14",
     "kth-node-redis": "^3.1.36",
-    "kth-node-server": "^3.1.9",
-    "kth-node-session": "^2.0.4",
     "kth-node-web-common": "^6.0.7",
-    "kth-style": "^7.0.11",
-    "local-cors-proxy": "^1.1.0",
+    "kth-style": "7.0.12",
     "mobx": "^6.3.13",
     "mobx-react": "^7.2.1",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
     "prop-types": "^15.8.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
@@ -67,27 +67,37 @@
     "reactstrap": "^8.10.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.8",
-    "@babel/core": "^7.16.12",
-    "@babel/plugin-transform-runtime": "^7.16.10",
+    "@babel/cli": "^7.17.0",
+    "@babel/core": "^7.17.2",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@kth/eslint-config-kth": "^2.0.2",
-    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
+    "babel-loader": "^8.2.3",
     "babel-eslint": "^10.1.0",
-    "concurrently": "^6.5.1",
-    "eslint": "^8.7.0",
+    "concurrently": "^7.0.0",
+    "css-loader": "^6.6.0",
+    "eslint": "^7.32.0",
+    "file-loader": "^6.2.0",
     "husky": "^7.0.4",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
     "jest-axe": "^5.0.1",
-    "jest-extended": "^1.2.0",
+    "jest-extended": "^1.2.1",
+    "mini-css-extract-plugin": "^2.5.3",
     "nodemon": "^2.0.15",
+    "null-loader": "^4.0.1",
     "parcel-bundler": "^1.12.5",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.3",
-    "sass": "^1.49.0"
+    "sass": "^1.49.7",
+    "sass-loader": "^12.6.0",
+    "set-value": "^4.1.0",
+    "terser-webpack-plugin": "^5.3.1",
+    "webpack": "^5.69.0",
+    "webpack-cli": "^4.9.2"
   },
   "// (prettier)": "configuration version 2020-06-15 - might also reside in .prettierrc.json",
   "prettier": {
