--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
   "scripts": {
     "build": "bash ./build.sh prod",
     "build-dev": "bash ./build.sh dev",
-    "build-dev-docker": "bash ./build.sh docker",
+    "docker:pack-dev": "bash ./build.sh docker",
+    "docker:build": "bash ./docker-build-image.sh dev",
+    "docker:run": "bash ./docker-run-image.sh dev",
+    "docker:start-dev": "npm run docker:build && npm run docker:run",
+    "docker:test:load": "npm run docker:build && bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run docker:run\" \"npm run wait-and-test:load\"'",
+    "wait-and-test:load": "echo '----- wait 40 seconds before running artillery test -----\n' && sleep 40 && echo '----- START ARTILLERY BUILD AND TEST LOAD -----\n' && npm run test:load",
     "lint": "eslint \"{public,server}/**/*.{js,jsx}\" --quiet",
     "lint-v": "eslint \"{public,server}/**/*.{js,jsx}\" ",
     "prepare": "husky install",
@@ -24,9 +29,7 @@
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "start": "bash -c 'NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
-    "start-dev:docker": "npm run build-dev-docker && bash ./build-and-run-docker-image.sh dev",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development node --inspect=0.0.0.0 app.js'",
-    "start-test:load": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run start-dev:docker\" \"npm run test:load\"'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "test:load": "docker-compose -f test/artillery/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
