--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "start": "bash -c 'NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
     "start-in-dev-docker": "bash -c 'NODE_ENV=development node --inspect=0.0.0.0 app.js'",
+    "start-in-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
     "test:load": "docker-compose -f test/artillery/docker-compose.yml up --build --abort-on-container-exit --remove-orphans",
     "test:notify": "NODE_ENV=test jest --watch --notify",
     "test:pages": "NODE_ENV=test jest ./public/js/app/pages/CourseSearchLayout.test.js --watch --notify",
-    "test:watch": "NODE_ENV=test jest --watch"
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test-performance-in-docker": "ID=$(docker build -f Dockerfile-performance-test -q .) && LOCAL_IMAGE_ID=$ID docker-compose -f docker-compose-performance-tests.yml up --build --abort-on-container-exit --remove-orphans"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
