--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prettier:all": "prettier --write \"**/*.js\" \"**/*.jsx\" \"**/*.scss\"",
     "start": "bash -c 'NODE_ENV=production node app.js'",
     "start-dev": "bash -c 'NODE_ENV=development concurrently --kill-others -n build,app \"npm run build-dev\" \"nodemon app.js\"'",
-    "start-in-dev-docker": "bash -c 'NODE_ENV=development node --inspect=0.0.0.0 app.js'",
+    "start-in-dev-docker": "bash -c 'NODE_ENV=development HAS_PRUNED_DEV_DEPEND=true node --inspect=0.0.0.0 app.js'",
     "start-in-performance-docker": "bash -c 'NODE_ENV=production TEST_TYPE=performance node app.js'",
     "test": "cross-env NODE_ENV=test jest",
     "test:components": "NODE_ENV=test jest ./public/js/app/components/SearchResultDisplay.test.js --watch --notify",
@@ -86,6 +86,7 @@
     "babel-loader": "^8.2.3",
     "concurrently": "^7.0.0",
     "css-loader": "^6.6.0",
+    "decache": "^4.6.1",
     "eslint": "^7.32.0",
     "file-loader": "^6.2.0",
     "husky": "^7.0.4",
