test: add paths to load test implementation

--- a/test/artillery/scripts/view-implementation.yml
+++ b/test/artillery/scripts/view-implementation.yml
@@ -24,7 +24,11 @@ scenarios:
     flow:
       - get:
           url: '/student/kurser/org/ADD'
-  - name: 'View programmes, on call to kopps api'
+  - name: 'View programmes list, one call to kopps api'
+    flow:
+      - get:
+          url: '/student/kurser/org'
+  - name: 'View programmes, one call to kopps api'
     flow:
       - get:
           url: '/student/kurser/kurser-inom-program'
